--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,15 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {}
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  border: none;
+}
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
 }
