--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,8 +13,37 @@
 html,
 body {
   max-width: 100vw;
+  width: 100%;
+}
+
+html {
+  overflow-y: scroll;
 }
 
 a {
   color: inherit;
 }
+
+::-webkit-scrollbar {
+  width: .25rem;
+  height: .25rem;
+  @media (min-width: 1024px) {
+      width: .375rem;
+  }
+}
+
+::-webkit-scrollbar-track {
+  background: #0f172a;
+  border-radius: 1.6rem;
+} 
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  border-radius: 1.6rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #f97316;
+}
+
+/* #e91b2d */
