--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -25,17 +26,17 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: .25rem;
-  height: .25rem;
+  width: 0.25rem;
+  height: 0.25rem;
   @media (min-width: 1024px) {
-      width: .375rem;
+    width: 0.375rem;
   }
 }
 
 ::-webkit-scrollbar-track {
   background: #0f172a;
   border-radius: 1.6rem;
-} 
+}
 
 ::-webkit-scrollbar-thumb {
   background: transparent;
